--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -91,7 +91,10 @@
             justify-content: center;
             padding: 20px;
         }
-        a {
+        .a {
+            color: #ffffff;
+        }
+        .a:hover {
             color: #ffffff;
         }
         .banner {
