--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -205,7 +205,7 @@
     </div>
     <hr>
     <button class="exit" onclick="100close()" id="exit">X</button>
-    <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="100"></iframe>                                                                                                                                          
+    <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="100" class="100f"></iframe>                                                                                                                                          
     <div class="card-align">
         <div class="card">
             <img src="fragment.png" alt="Rare Rank">
@@ -213,7 +213,7 @@
             <p class="p">Rp 10k</p>
             <div class="align"></div>
             <div class="align"></div>
-            <a class="button btn"><h4>ORDER</h4></a>
+            <a class="button btn" onclick="100open()"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="fragment.png" alt="Super Rare Rank">
