--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -152,19 +152,19 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
-        .100f {
+        .fs {
             display: none;
         }
-        .500f {
+        .fl {
             display: none;
         }
-        .800f {
+        .fd {
             display: none;
         }
-        .1500f {
+        .fsl {
             display: none;
         }
-        .2000f {
+        .fdr {
             display: none;
         }
         .exit {
@@ -205,7 +205,7 @@
     </div>
     <hr>
     <button class="exit" onclick="100close()" id="exit">X</button>
-    <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="100" class="100f"></iframe>                                                                                                                                          
+    <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="100" class="fs"></iframe>                                                                                                                                          
     <div class="card-align">
         <div class="card">
             <img src="fragment.png" alt="Rare Rank">
