--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -213,7 +213,7 @@
             <p class="p">Rp 10k</p>
             <div class="align"></div>
             <div class="align"></div>
-            <a class="button btn" onclick="100open()"><h4>ORDER</h4></a>
+            <button class="button btn" onclick="100open()"><h4>ORDER</h4></button>
         </div>
         <div class="card">
             <img src="fragment.png" alt="Super Rare Rank">
