--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -213,7 +213,7 @@
             <p class="p">Rp 10k</p>
             <div class="align"></div>
             <div class="align"></div>
-            <button class="button btn" onclick="100open()"><h4>ORDER</h4></button>
+            <button class="button btn" onclick="opens()"><h4>ORDER</h4></button>
         </div>
         <div class="card">
             <img src="fragment.png" alt="Super Rare Rank">
@@ -274,7 +274,7 @@
             lastScrollY = window.scrollY;
         });
 
-        function 100open() {
+        function opens() {
             document.getElementById("iframe").style.display = "block";
             document.getElementById("exit").style.display = "block";
     </script>
