--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -213,7 +213,7 @@
             <p class="p">Rp 10k</p>
             <div class="align"></div>
             <div class="align"></div>
-            <button class="button btn" onclick="opens()"><h4>ORDER</h4></button>
+            <a class="button btn" onclick="opens()"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="fragment.png" alt="Super Rare Rank">
@@ -275,7 +275,7 @@
         });
 
         function opens() {
-            document.getElementById("iframe").style.display = "block";
+            document.getElementById("fs").style.display = "block";
             document.getElementById("exit").style.display = "block";
     </script>
     <footer>
