--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -204,7 +204,7 @@
         <div class="header-text"><h1> RANK </h1></div>
     </div>
     <hr>
-    <button class="exit" onclick="100close()" id="exit">X</button>
+    <button class="exit" onclick="closes()" id="exit">X</button>
     <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="100" class="fs"></iframe>                                                                                                                                          
     <div class="card-align">
         <div class="card">
@@ -277,6 +277,7 @@
         function opens() {
             document.getElementById("fs").style.display = "block";
             document.getElementById("exit").style.display = "block";
+        }
     </script>
     <footer>
         <div class="footer-content">
