--- a/store/index.html
+++ b/store/index.html
@@ -150,6 +150,9 @@
             border-color: black;
             align-self: center;
         }
+        .h1:hover {
+            color: white;
+        }
     </style>
 </head>
 <body>
