--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -205,7 +205,7 @@
     </div>
     <hr>
     <button class="exit" onclick="closes()" id="exit">X</button>
-    <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="100" class="fs"></iframe>                                                                                                                                          
+    <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs"></iframe>                                                                                                                                          
     <div class="card-align">
         <div class="card">
             <img src="fragment.png" alt="Rare Rank">
