--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -168,7 +168,7 @@
             display: none;
         }
         .exit {
-            position: relative;
+            position: absolute;
             left: 90%;
             display: none;
             top: 10%;
