--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -246,7 +246,7 @@
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
     </div>
-    <button class="exit" onclick="closes()" id="exit">X</button>
+    <button class="exit" onclick="close()" id="exit">X</button>
     <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs"></iframe>
     <div>
         <img src="" alt="">
@@ -277,6 +277,30 @@
         function opens() {
             document.getElementById("fs").style.display = "block";
             document.getElementById("exit").style.display = "block";
+        }
+        function openl() {
+            document.getElementById("l").style.display = "block";
+            document.getElementById("exit").style.display = "block";
+        }
+        function opend() {
+            document.getElementById("d").style.display = "block";
+            document.getElementById("exit").style.display = "block";
+        }
+        function opensl() {
+            document.getElementById("sl").style.display = "block";
+            document.getElementById("exit").style.display = "block";
+        }
+        function opendr() {
+            document.getElementById("dr").style.display = "block";
+            document.getElementById("exit").style.display = "block";
+        }
+        function close() {
+            document.getElementById("fs").style.display = "none";
+            document.getElementById("fl").style.display = "none";
+            document.getElementById("fd").style.display = "none";
+            document.getElementById("fsl").style.display = "none";
+            document.getElementById("fdr").style.display = "none";
+            document.getElementById("exit").style.display = "none";
         }
     </script>
     <footer>
