--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -147,7 +147,7 @@
         iframe {
             height: 600px;
             width: 300px;
-            position: absolute;
+            position: relative;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -168,7 +168,7 @@
             display: none;
         }
         .exit {
-            position: absolute;
+            position: relative;
             left: 90%;
             display: none;
             top: 10%;
