--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -147,7 +147,7 @@
         .iframe {
             height: 600px;
             width: 300px;
-            position: absolute;
+            position: relative;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -168,7 +168,7 @@
             display: none;
         }
         .exit {
-            position: absolute;
+            position: relative;
             left: 90%;
             display: none;
             top: 10%;
@@ -177,6 +177,7 @@
             height: 100%;
             width: 100%;
             display: none;
+            position: relative;
         }
     </style>
 </head>
@@ -251,7 +252,7 @@
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
     </div>
-    <iframe src="blank.html" class=".blank" id="blank"></iframe>
+    <iframe src="blank.html" class="blank" id="blank"></iframe>
     <button class="exit" onclick="close()" id="exit">X</button>
     <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs .iframe"></iframe>
     <div>
