--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -174,10 +174,11 @@
             top: 10%;
         }
         .blank {
-            height: 100%;
+            height: 1000px;
             width: 100%;
             display: none;
             position: relative;
+            top: 0%;
         }
     </style>
 </head>
