--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -177,7 +177,7 @@
             height: 1000px;
             width: 100%;
             display: none;
-            position: relative;
+            position: fixed;
             top: 0%;
         }
     </style>
