--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -254,7 +254,7 @@
             </div>
         </div>
         <iframe src="blank.html" class="blank" id="blank"></iframe>
-        <button class="exit" onclick="close()" id="exit">X</button>
+        <button class="exit" onclick="closes()" id="exit">X</button>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
         <div>
             <img src="" alt="">
@@ -303,7 +303,7 @@
                 document.getElementById("dr").style.display = "block";
                 document.getElementById("exit").style.display = "block";
             }
-            function close() {
+            function closes() {
                 document.getElementById("exit").style.display = "none";
                 document.getElementById("blank").style.display = "none";
                 document.getElementById("fs").style.display = "none";
