--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -90,6 +90,7 @@
                 flex-wrap: wrap;
                 justify-content: center;
                 padding: 20px;
+                display: block;
             }
             .a {
                 color: #ffffff;
@@ -286,6 +287,7 @@
                 document.getElementById("fs").style.display = "block";
                 document.getElementById("blank").style.display = "block";
                 document.getElementById("exit").style.display = "block";
+                document.getElementsByClassName("card-align").style.display = "none";
             }
             function openl() {
                 document.getElementById("l").style.display = "block";
@@ -311,6 +313,7 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
+                document.getElementsByClassName("card-align").style.display = "block";
             }
         </script>
         <footer>
