--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -90,7 +90,6 @@
                 flex-wrap: wrap;
                 justify-content: center;
                 padding: 20px;
-                display: block;
             }
             .a {
                 color: #ffffff;
@@ -213,6 +212,9 @@
         </div>
         <hr>
         <div class="card-align">
+            <iframe src="blank.html" class="blank" id="blank"></iframe>
+            <button class="exit" onclick="closes()" id="exit">X</button>
+            <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
             <div class="card">
                 <img src="fragment.png" alt="Rare Rank">
                 <h2>x100 fragment</h2>
@@ -254,9 +256,6 @@
                 <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
             </div>
         </div>
-        <iframe src="blank.html" class="blank" id="blank"></iframe>
-        <button class="exit" onclick="closes()" id="exit">X</button>
-        <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
         <div>
             <img src="" alt="">
             <h2></h2>
@@ -313,7 +312,7 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                document.getElementsByClassName("card-align").style.display = "block";
+                document.getElementsByClassName("card-align").style.display = "flex";
             }
         </script>
         <footer>
