--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -286,7 +286,7 @@
                 document.getElementById("fs").style.display = "block";
                 document.getElementById("blank").style.display = "block";
                 document.getElementById("exit").style.display = "block";
-                document.getElementsByClassName("card").style.display = "none";
+                document.querySelector('.card').style.display = "none";
             }
             function openl() {
                 document.getElementById("l").style.display = "block";
@@ -312,7 +312,7 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                document.getElementsByClassName("card").style.display = "flex";
+                document.querySelector('.card').style.display = "flex";
             }
         </script>
         <footer>
