--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -211,49 +211,51 @@
             <div class="header-text"><h1> RANK </h1></div>
         </div>
         <hr>
-        <div class="card-align">
+        <div>
             <iframe src="blank.html" class="blank" id="blank"></iframe>
             <button class="exit" onclick="closes()" id="exit">X</button>
             <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
-            <div class="card">
-                <img src="fragment.png" alt="Rare Rank">
-                <h2>x100 fragment</h2>
-                <p class="p">Rp 10k</p>
-                <div class="align"></div>
-                <div class="align"></div>
-                <a class="button btn" onclick="opens()"><h4>ORDER</h4></a>
-            </div>
-            <div class="card">
-                <img src="fragment.png" alt="Super Rare Rank">
-                <h2>x500 fragment</h2>
-                <p class="p">Rp 50k</p>
-                <div class="align"></div>
-                <div class="align"></div>
-                <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
-            </div>
-            <div class="card">
-                <img src="fragment.png" alt="Super Super Rare Rank">
-                <h2>x800 fragment</h2>
-                <p class="p">Rp 80k</p>
-                <div class="align"></div>
-                <div class="align"></div>
-                <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
-            </div>
-            <div class="card">
-                <img src="fragment.png" alt="Super Super Rare+ Rank">
-                <h2>x1500 fragment</h2>
-                <p class="p">Rp 150k</p>
-                <div class="align"></div>
-                <div class="align"></div>
-                <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
-            </div>
-            <div class="card">
-                <img src="fragment.png" alt="Super Super Rare++ Rank">
-                <h2>x2000 fragment</h2>
-                <p class="p">Rp 200k</p>
-                <div class="align"></div>
-                <div class="align"></div>
-                <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+            <div class="card-align">
+                <div class="card">
+                    <img src="fragment.png" alt="Rare Rank">
+                    <h2>x100 fragment</h2>
+                    <p class="p">Rp 10k</p>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <a class="button btn" onclick="opens()"><h4>ORDER</h4></a>
+                </div>
+                <div class="card">
+                    <img src="fragment.png" alt="Super Rare Rank">
+                    <h2>x500 fragment</h2>
+                    <p class="p">Rp 50k</p>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+                </div>
+                <div class="card">
+                    <img src="fragment.png" alt="Super Super Rare Rank">
+                    <h2>x800 fragment</h2>
+                    <p class="p">Rp 80k</p>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+                </div>
+                <div class="card">
+                    <img src="fragment.png" alt="Super Super Rare+ Rank">
+                    <h2>x1500 fragment</h2>
+                    <p class="p">Rp 150k</p>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+                </div>
+                <div class="card">
+                    <img src="fragment.png" alt="Super Super Rare++ Rank">
+                    <h2>x2000 fragment</h2>
+                    <p class="p">Rp 200k</p>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+                </div>
             </div>
         </div>
         <div>
