--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -288,7 +288,7 @@
                 document.getElementById("fs").style.display = "block";
                 document.getElementById("blank").style.display = "block";
                 document.getElementById("exit").style.display = "block";
-                document.querySelector('.card').style.display = "none";
+                document.querySelector('.card-align').style.display = "none";
             }
             function openl() {
                 document.getElementById("l").style.display = "block";
@@ -314,7 +314,7 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                document.querySelector('.card').style.display = "flex";
+                document.querySelector('.card-align').style.display = "flex";
             }
         </script>
         <footer>
