--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -10,6 +10,7 @@
             body {
                 background-color: gray;
                 margin: 0;
+                display: block;
             }
             .header {
                 position: fixed;
@@ -288,7 +289,7 @@
                 document.getElementById("fs").style.display = "block";
                 document.getElementById("blank").style.display = "block";
                 document.getElementById("exit").style.display = "block";
-                document.querySelector('.card-align').style.display = "none";
+                document.querySelector('body').style.display = "none";
             }
             function openl() {
                 document.getElementById("l").style.display = "block";
@@ -314,7 +315,7 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                document.querySelector('.card-align').style.display = "flex";
+                document.querySelector('body').style.display = "block";
             }
         </script>
         <footer>
