--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -181,92 +181,97 @@
                 position: fixed;
                 top: 0%;
             }
+            .body {
+                display: block;
+            }
         </style>
     </head>
     <body>
-        <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#">Four Network ID</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://four.my.id/home"><b>Home</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://four.my.id/store"><b>Store</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://four.my.id/perks"><b>Perks</b></a>
-                        </li>
-                        <li class="nav-link">
-                            <a href="https://four.my.id/discord"><b>Discord</b></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <div class="banner">
-            <div class="header-text"><h1> RANK </h1></div>
-        </div>
-        <hr>
-        <div>
-            <iframe src="blank.html" class="blank" id="blank"></iframe>
-            <button class="exit" onclick="closes()" id="exit">X</button>
-            <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
-            <div class="card-align">
-                <div class="card">
-                    <img src="fragment.png" alt="Rare Rank">
-                    <h2>x100 fragment</h2>
-                    <p class="p">Rp 10k</p>
-                    <div class="align"></div>
-                    <div class="align"></div>
-                    <a class="button btn" onclick="opens()"><h4>ORDER</h4></a>
-                </div>
-                <div class="card">
-                    <img src="fragment.png" alt="Super Rare Rank">
-                    <h2>x500 fragment</h2>
-                    <p class="p">Rp 50k</p>
-                    <div class="align"></div>
-                    <div class="align"></div>
-                    <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
-                </div>
-                <div class="card">
-                    <img src="fragment.png" alt="Super Super Rare Rank">
-                    <h2>x800 fragment</h2>
-                    <p class="p">Rp 80k</p>
-                    <div class="align"></div>
-                    <div class="align"></div>
-                    <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
-                </div>
-                <div class="card">
-                    <img src="fragment.png" alt="Super Super Rare+ Rank">
-                    <h2>x1500 fragment</h2>
-                    <p class="p">Rp 150k</p>
-                    <div class="align"></div>
-                    <div class="align"></div>
-                    <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
-                </div>
-                <div class="card">
-                    <img src="fragment.png" alt="Super Super Rare++ Rank">
-                    <h2>x2000 fragment</h2>
-                    <p class="p">Rp 200k</p>
-                    <div class="align"></div>
-                    <div class="align"></div>
-                    <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+        <iframe src="blank.html" class="blank" id="blank"></iframe>
+        <button class="exit" onclick="closes()" id="exit">X</button>
+        <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
+        <div class="body">
+            <header class="header">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <a class="navbar-brand" href="#">Four Network ID</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://four.my.id/home"><b>Home</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://four.my.id/store"><b>Store</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://four.my.id/perks"><b>Perks</b></a>
+                            </li>
+                            <li class="nav-link">
+                                <a href="https://four.my.id/discord"><b>Discord</b></a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+            <div class="banner">
+                <div class="header-text"><h1> RANK </h1></div>
+            </div>
+            <hr>
+            <div>
+                <div class="card-align">
+                    <div class="card">
+                        <img src="fragment.png" alt="Rare Rank">
+                        <h2>x100 fragment</h2>
+                        <p class="p">Rp 10k</p>
+                        <div class="align"></div>
+                        <div class="align"></div>
+                        <a class="button btn" onclick="opens()"><h4>ORDER</h4></a>
+                    </div>
+                    <div class="card">
+                        <img src="fragment.png" alt="Super Rare Rank">
+                        <h2>x500 fragment</h2>
+                        <p class="p">Rp 50k</p>
+                        <div class="align"></div>
+                        <div class="align"></div>
+                        <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+                    </div>
+                    <div class="card">
+                        <img src="fragment.png" alt="Super Super Rare Rank">
+                        <h2>x800 fragment</h2>
+                        <p class="p">Rp 80k</p>
+                        <div class="align"></div>
+                        <div class="align"></div>
+                        <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+                    </div>
+                    <div class="card">
+                        <img src="fragment.png" alt="Super Super Rare+ Rank">
+                        <h2>x1500 fragment</h2>
+                        <p class="p">Rp 150k</p>
+                        <div class="align"></div>
+                        <div class="align"></div>
+                        <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+                    </div>
+                    <div class="card">
+                        <img src="fragment.png" alt="Super Super Rare++ Rank">
+                        <h2>x2000 fragment</h2>
+                        <p class="p">Rp 200k</p>
+                        <div class="align"></div>
+                        <div class="align"></div>
+                        <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
+                    </div>
                 </div>
             </div>
+            <div>
+                <img src="" alt="">
+                <h2></h2>
+                <p></p>
+                <a href=""></a>
+            </div>
+            <div class="content-1"></div>
+            <div class="content-1"></div>
         </div>
-        <div>
-            <img src="" alt="">
-            <h2></h2>
-            <p></p>
-            <a href=""></a>
-        </div>
-        <div class="content-1"></div>
-        <div class="content-1"></div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
