--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -294,7 +294,7 @@
                 document.getElementById("fs").style.display = "block";
                 document.getElementById("blank").style.display = "block";
                 document.getElementById("exit").style.display = "block";
-                document.querySelector('body').style.display = "none";
+                document.querySelector('.body').style.display = "none";
             }
             function openl() {
                 document.getElementById("l").style.display = "block";
@@ -320,7 +320,7 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                document.querySelector('body').style.display = "block";
+                document.querySelector('.body').style.display = "block";
             }
         </script>
         <footer>
