--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -148,7 +148,7 @@
             .iframe{
                 height: 600px;
                 width: 300px;
-                position: relative;
+                position: absolute;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
