--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -188,7 +188,9 @@
     </head>
     <body>
         <iframe src="blank.html" class="blank" id="blank"></iframe>
-        <button class="btn exit" onclick="closes()" id="exit"><a href="index.html">X</a></button>
+        <a href="index.html">
+            <button class="btn exit" onclick="closes()" id="exit"></button>
+        </a>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
         <div class="body">
             <header class="header">
