--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -109,7 +109,7 @@
                 align-items: center;
                 text-align: center;
                 position: relative;
-                width: auto;
+                width: 100%;
             }
             .header-text {
                 position: absolute;
