--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -188,9 +188,7 @@
     </head>
     <body>
         <iframe src="blank.html" class="blank" id="blank"></iframe>
-        <a href="index.html">
-            <button class="btn exit" onclick="closes()" id="exit"></button>
-        </a>
+        <button class="btn exit" onclick="closes()" id="exit"></button>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
         <div class="body">
             <header class="header">
@@ -323,6 +321,7 @@
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
                 document.querySelector('.body').style.display = "block";
+                location.reload();
             }
         </script>
         <footer>
