--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -188,7 +188,7 @@
     </head>
     <body>
         <iframe src="blank.html" class="blank" id="blank"></iframe>
-        <button class="btn exit" onclick="closes()" id="exit">X</button>
+        <button class="exit" onclick="closes()" id="exit">X</button>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp&amp;" id="fs" class="fs iframe"></iframe>
         <div class="body">
             <header class="header">
