--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -321,7 +321,7 @@
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
                 document.querySelector('.body').style.display = "block";
-                location.reload();
+                window.location.reload();
             }
         </script>
         <footer>
