--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -101,7 +101,7 @@
             .banner {
                 background-image: url('banner.jpg');
                 background-color: gray;
-                background-size: auto;
+                background-size: cover;
                 background-attachment: fixed;
                 height: 370px;
                 color: white;
