--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -320,8 +320,7 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                document.getElementById("body").style.display = "block";
-                window.location.reload();
+                window.location.reload(true);
             }
         </script>
         <footer>
