--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -320,8 +320,8 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                setTimeout(function() {
-                    window.location.href = "index.html";
+                setTimeout(() => {
+                    window.location.reload(true);
                 }, 50);
             }
         </script>
