--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -317,7 +317,7 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                document.getElementById("body").style.display = "flex";
+                document.getElementById("body").style.display = "block";
 
             }
         </script>
