--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -317,6 +317,8 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
+                document.getElementById("blank").src = "about:blank";
+                document.getElementById("fs").src = "about:blank";
                 document.getElementById("body").style.display = "block";
 
             }
