--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -190,7 +190,7 @@
         <div id="body">
             <header class="header">
                 <nav class="navbar navbar-expand-lg navbar-dark">
-                    <a class="navbar-brand" href="#">Four Network ID</a>
+                    <a class="navbar-brand" href="https://four.my.id">Four Network ID</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -213,7 +213,7 @@
                 </nav>
             </header>
             <div class="banner">
-                <div class="header-text"><h1> RANK </h1></div>
+                <div class="header-text"><h1> FRAGMENT </h1></div>
             </div>
             <hr>
             <div>
@@ -337,8 +337,6 @@
                 document.getElementById("fd").style.display = "none";
                 document.getElementById("fsl").style.display = "none";
                 document.getElementById("fdr").style.display = "none";
-                document.getElementById("blank").src = "about:blank";
-                document.getElementById("fs").src = "about:blank";
                 document.getElementById("body").style.display = "block";
 
             }
