--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -146,7 +146,7 @@
 <body>
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">Four Network ID</a>
+            <a class="navbar-brand" href="https://four.my.id">Four Network ID</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
